@@ -1,3 +1,10 @@
+2016-04-08  Patrick Palka  <ppalka@gcc.gnu.org>
+
+	PR c++/70590
+	PR c++/70452
+	* constexpr.c (cxx_eval_outermost_expression): Call unshare_expr
+	on the result if it's not a CONSTRUCTOR.
+
 2016-04-07  Patrick Palka  <ppalka@gcc.gnu.org>
 
 	PR c++/70452
